--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,3 @@
-
-
 /*========================
 =======Typography=========
 ==========================*/
@@ -13,15 +11,15 @@ body {
 
 ul {
 	list-style: none;
-	margin:0;
-	padding:0;
+	margin: 0;
+	padding: 0;
 }
 
-.navbar-nav li a:hover, 
+.navbar-nav li a:hover,
 .navbar-nav li a:focus {
-	outline:none;
+	outline: none;
 	outline-offset: 0;
-	text-decoration:none;  
+	text-decoration: none;
 	background: transparent;
 }
 
@@ -34,14 +32,14 @@ a {
 	transition: 300ms;
 }
 
-a:focus, 
+a:focus,
 a:hover {
 	text-decoration: none;
 	outline: none;
 }
 
 h1 {
-	font-size:36px;
+	font-size: 36px;
 }
 
 h2 {
@@ -62,12 +60,12 @@ h5 {
 
 h1, h2, h3, h4, h5, h6 {
 	font-family: 'Raleway', sans-serif;
-	font-weight:300;
-	text-transform:capitalize;
+	font-weight: 300;
+	text-transform: capitalize;
 }
 
-.padding{	
-	padding:60px 10px;
+.padding {
+	padding: 60px 10px;
 }
 
 .section-title {
@@ -75,16 +73,16 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .section-title h1 {
-	margin-top:0;
-	margin-bottom:30px;
+	margin-top: 0;
+	margin-bottom: 30px;
 }
 
 .btn-primary {
-	margin-top:25px;
-	margin-bottom:25px;
-	border:2px solid rgb(89,20,160);
-	color: rgb(89,20,160);
-	background-color:transparent;
+	margin-top: 25px;
+	margin-bottom: 25px;
+	border: 2px solid rgb(89, 20, 160);
+	color: rgb(89, 20, 160);
+	background-color: transparent;
 	text-transform: uppercase;
 	font-size: 16px;
 	font-weight: 700;
@@ -94,22 +92,21 @@ h1, h2, h3, h4, h5, h6 {
 	-moz-transition: all 0.3s ease-in-out;
 	-ms-transition: all 0.3s ease-in-out;
 	-o-transition: all 0.3s ease-in-out;
-	transition: all 0.3s ease-in-out;	
-	letter-spacing:0;
-	position:relative;
-	box-shadow:none;
-	z-index:1;
+	transition: all 0.3s ease-in-out;
+	letter-spacing: 0;
+	position: relative;
+	box-shadow: none;
+	z-index: 1;
 }
 
-
-.btn-primary:before, 
+.btn-primary:before,
 .btn-primary:after {
-	position:absolute;
-	content:"";
-	height:100%;
-	width:0;
-	border-radius:4px;
-	z-index:-1;
+	position: absolute;
+	content: "";
+	height: 100%;
+	width: 0;
+	border-radius: 4px;
+	z-index: -1;
 	-webkit-transition: all 0.5s ease-in-out;
 	-moz-transition: all 0.5s ease-in-out;
 	-ms-transition: all 0.5s ease-in-out;
@@ -118,138 +115,147 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .btn-primary:before {
-	left:0;
-	top:0;
-	border-top:2px solid rgb(89,20,160);
+	left: 0;
+	top: 0;
+	border-top: 2px solid rgb(89, 20, 160);
 }
 
 .btn-primary:after {
-	right:0;
-	bottom:0;
-	border-bottom:2px solid rgb(89,20,160);
+	right: 0;
+	bottom: 0;
+	border-bottom: 2px solid rgb(89, 20, 160);
 }
 
 .btn-primary:hover:before {
-	left:0;
-	width:100%;
-	background-color:rgba(89,20,160,.7);
+	left: 0;
+	width: 100%;
+	background-color: rgba(89, 20, 160, .7);
 }
+
 .btn-primary:hover:after {
-	width:100%;
-	right:0;
-	background-color:rgba(89,20,160,.7);
+	width: 100%;
+	right: 0;
+	background-color: rgba(89, 20, 160, .7);
 }
 
-.btn-primary:hover{
-	color:#fff;
-	background-color:transparent;
-	box-shadow: 0px 0px 0px 1px rgba(89,20,160,.7);
+.btn-primary:hover {
+	color: #fff;
+	background-color: transparent;
+	box-shadow: 0px 0px 0px 1px rgba(89, 20, 160, .7);
 }
 
-.parallax-section { 	
+.parallax-section {
 	background-position: 50% 0;
 	background-repeat: no-repeat;
 	background-size: cover;
-	background-attachment:fixed;
+	background-attachment: fixed;
 	width: 100%;
-	min-height:437px;
-	position:relative;
+	min-height: 437px;
+	position: relative;
 }
 
 .overlay-bg {
-	position:absolute;
-	top:0;
-	left:0;
-	width:100%;
-	height:100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 }
 
 .form-control {
-  height: 55px;
-  color: #000;
-  border: 1px solid #ededed;
-  border-radius: 0;
-  box-shadow: none;
-  outline: none;
+	height: 55px;
+	color: #000;
+	border: 1px solid #ededed;
+	border-radius: 0;
+	box-shadow: none;
+	outline: none;
 }
 
 .form-control:focus {
-  border-color: rgba(89,20,160,.7);
-  outline: 0;
-  -webkit-box-shadow:none;
-  box-shadow:none;
+	border-color: rgba(89, 20, 160, .7);
+	outline: 0;
+	-webkit-box-shadow: none;
+	box-shadow: none;
 }
 
 .form-group {
-  margin-bottom: 30px;
+	margin-bottom: 30px;
 }
 
-.form-control::-webkit-input-placeholder { color: black; }
-.form-control:-moz-placeholder { color: black; }
-.form-control::-moz-placeholder { color: black; }
-.form-control:-ms-input-placeholder { color: black; }
+.form-control::-webkit-input-placeholder {
+	color: black;
+}
+
+.form-control:-moz-placeholder {
+	color: black;
+}
+
+.form-control::-moz-placeholder {
+	color: black;
+}
+
+.form-control:-ms-input-placeholder {
+	color: black;
+}
 
 .navbar-toggle {
-	border:1px solid #fff;
-	margin-top:12px;
+	border: 1px solid #fff;
+	margin-top: 12px;
 }
 
 .navbar-toggle .icon-bar {
-	background-color:#fff;
+	background-color: #fff;
 }
+
 /*==============================
 =========navigation-section=========
 ================================*/
 
 .navbar-fixed-top {
-	background-color:transparent;
-	top:40px;
+	background-color: transparent;
+	top: 40px;
 	-webkit-transition: all 0.5s ease-in-out;
--moz-transition: all 0.5s ease-in-out;
--ms-transition: all 0.5s ease-in-out;
--o-transition: all 0.5s ease-in-out;
-transition: all 0.5s ease-in-out;
+	-moz-transition: all 0.5s ease-in-out;
+	-ms-transition: all 0.5s ease-in-out;
+	-o-transition: all 0.5s ease-in-out;
+	transition: all 0.5s ease-in-out;
 }
 
-.navbar-fixed-top.main-nav{
-	background-color:rgba(220, 220, 220, 0.80);
-	top:0;
+.navbar-fixed-top.main-nav {
+	background-color: rgba(220, 220, 220, 0.80);
+	top: 0;
 }
 
 .navbar-nav li a {
-	text-transform:uppercase;
-	line-height:28px;
+	text-transform: uppercase;
+	line-height: 28px;
 }
 
 .navbar-brand {
-	height:70px;
+	height: 70px;
 	padding: 5px 15px;
 }
 
-@media (min-width: 768px){
-	.navbar>.container .navbar-brand {
+@media (min-width: 768px) {
+	.navbar > .container .navbar-brand {
 		margin-left: -35px;
 	}
 }
-
 
 /*==============================
 =========slider-section=========
 ================================*/
 
-
 #slider-section, #image-bg-section {
-	background-repeat:no-repeat;
-	background-size:cover;
-	height:730px;
-	background-image:url(../images/shoe.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+	height: 730px;
+	background-image: url(../images/shoe.jpg);
 }
 
-
-
 .slider-content {
-	margin-top:200px;
-	font-size:16px;
+	margin-top: 200px;
+	font-size: 16px;
 }
 
 .slider-content h1 {
@@ -260,10 +266,8 @@ transition: all 0.5s ease-in-out;
 }
 
 .slider-content h1 span {
-	color:#5914a0;
+	color: #5914a0;
 }
-
-
 
 /*=========Carousel Fade==========*/
 
@@ -297,36 +301,34 @@ transition: all 0.5s ease-in-out;
 	z-index: 2;
 }
 
-
-
 /*=========about==========*/
 
 #about {
-	background-image:url(../images/pregnant_prone.jpg);
-	font-weight:300;
-	font-size:18px;
-	background-color:#333;
+	background-image: url(../images/pregnant_prone.jpg);
+	font-weight: 300;
+	font-size: 18px;
+	background-color: #333;
 	color: white;
 }
 
 #about .overlay-bg {
-	background-color:rgba(0, 0, 0, 0.70);
+	background-color: rgba(0, 0, 0, 0.70);
 }
 
-#about> .container {
-	position:relative;
-	z-index:10;
+#about > .container {
+	position: relative;
+	z-index: 10;
 }
 
 #about img {
-	display:inline-block;
-	margin-bottom:12px;
+	display: inline-block;
+	margin-bottom: 12px;
 }
 
 #about h1 {
-	font-size:48px;
-	font-weight:700;
-	margin-bottom:35px;
+	font-size: 48px;
+	font-weight: 700;
+	margin-bottom: 35px;
 }
 
 .tab-pane.active {
@@ -347,8 +349,8 @@ transition: all 0.5s ease-in-out;
 /*=========options==========*/
 
 #options {
-	background-image:url(../images/yellow_stretch.jpg);
-	background-color:white;
+	background-image: url(../images/yellow_stretch.jpg);
+	background-color: white;
 }
 
 #options .overlay-bg {
@@ -356,53 +358,53 @@ transition: all 0.5s ease-in-out;
 }
 
 .visa-tab .tab-list {
-	
+
 }
 
 .visa-tab .tab-list li {
-	position:relative;
-	border-bottom:1px solid #000;
-	max-width:145px;
+	position: relative;
+	border-bottom: 1px solid #000;
+	max-width: 145px;
 }
 
 .visa-tab .tab-list li a {
 	color: #465056;
-	font-size:18px;
-	font-weight:500;
-	padding:35px 25px;
-	display:block;
-	position:relative;
-	z-index:2;
+	font-size: 18px;
+	font-weight: 500;
+	padding: 35px 25px;
+	display: block;
+	position: relative;
+	z-index: 2;
 }
 
-.visa-tab .tab-list li a i{
-	display:block;
-	font-size:60px;
+.visa-tab .tab-list li a i {
+	display: block;
+	font-size: 60px;
 }
 
 .visa-tab .tab-content {
-	padding:120px 100px;
+	padding: 120px 100px;
 }
 
 .visa-tab .tab-content h1 {
-	font-size:48px;
-	font-weight:700;
-	margin-bottom:30px;
+	font-size: 48px;
+	font-weight: 700;
+	margin-bottom: 30px;
 }
 
 .visa-tab .tab-content p {
-	margin-bottom:25px;
+	margin-bottom: 25px;
 	font-size: 1.2em;
 }
 
 .visa-tab .tab-content a {
-	color:#ed1c24;
-	font-size:18px;
-	font-weight:700;
+	color: #ed1c24;
+	font-size: 18px;
+	font-weight: 700;
 }
 
 .visa-tab .tab-content a:hover {
-	color:#fff;
+	color: #fff;
 }
 
 .visa-tab .tab-content li {
@@ -410,77 +412,73 @@ transition: all 0.5s ease-in-out;
 	font-size: 1.2em;
 }
 
-
-#comments-carousel .item img{
-	height:175px;
-	width:175px;
-	display:inline-block;
-	background-color:#f3f3f3;
-	padding:10px;
-	margin-bottom:30px;
+#comments-carousel .item img {
+	height: 175px;
+	width: 175px;
+	display: inline-block;
+	background-color: #f3f3f3;
+	padding: 10px;
+	margin-bottom: 30px;
 }
 
-
-#comments-carousel .word-author span{
+#comments-carousel .word-author span {
 	font-style: italic;
-	font-weight:700;
+	font-weight: 700;
 }
 
 /*================Contact us==============*/
 
 #contact-us {
-	background-color:#f7f7f7;
+	background-color: #f7f7f7;
 }
 
-.contact-content .contact-info{
-	font-size:20px;
-	font-weight:300;
+.contact-content .contact-info {
+	font-size: 20px;
+	font-weight: 300;
 }
 
 .contact-content .contact-info i {
-	font-size:35px;
-	-webkit-transition:all 0.3s ease-out 0s;
-	-moz-transition:all 0.3s ease-out 0s;
-	-ms-transition:all 0.3s ease-out 0s;
-	-o-transition:all 0.3s ease-out 0s;
-	transition:all 0.3s ease-out 0s;
-	
+	font-size: 35px;
+	-webkit-transition: all 0.3s ease-out 0s;
+	-moz-transition: all 0.3s ease-out 0s;
+	-ms-transition: all 0.3s ease-out 0s;
+	-o-transition: all 0.3s ease-out 0s;
+	transition: all 0.3s ease-out 0s;
+
 }
 
-.contact-content .contact-info:hover i{
-	color:#ed1c24;
+.contact-content .contact-info:hover i {
+	color: #ed1c24;
 }
 
 .contact-content .contact-info h3 {
-	text-transform:uppercase;
+	text-transform: uppercase;
 }
 
 .contact-content .contact-info a:hover {
-	color:#000;
+	color: #000;
 }
-
 
 #contact-form {
 	padding: 40px 20px;
 }
 
 #contact-form #message {
-	height:220px;
-	resize:none;
-	padding:18px;
+	height: 220px;
+	resize: none;
+	padding: 18px;
 }
 
-
 #footer-bottom {
-	background-color:#131316;
-	color:#fff;
-	padding:40px 0 30px;
-	font-weight:300;
+	background-color: #131316;
+	color: #fff;
+	padding: 40px 0 30px;
+	font-weight: 300;
 }
 
 #footer-bottom a {
-	color:#5914a0;
-	font-weight:600;
+	color: #5914a0;
+	font-weight: 600;
 }
 
 /*================Pricing-section==============*/
@@ -490,18 +488,18 @@ transition: all 0.5s ease-in-out;
 	color: white;
 }
 
-#pricing-section .section-title h1{
-	margin-bottom:30px;
+#pricing-section .section-title h1 {
+	margin-bottom: 30px;
 }
 
 #pricing-section .plans {
-	margin-bottom:15px;
+	margin-bottom: 15px;
 }
 
-.plans .plan{
-	background-color:#5914a0;
-	color:#fff;
-	padding:30px 25px;
+.plans .plan {
+	background-color: #5914a0;
+	color: #fff;
+	padding: 30px 25px;
 	-webkit-transition: all 0.5s ease-in-out;
 	-moz-transition: all 0.5s ease-in-out;
 	-ms-transition: all 0.5s ease-in-out;
@@ -512,22 +510,21 @@ transition: all 0.5s ease-in-out;
 }
 
 .plans .plan h1 {
-	margin-top:10px;
-	margin-bottom:30px;
+	margin-top: 10px;
+	margin-bottom: 30px;
 }
-
 
 /*================trainer==============*/
 
 .trainer {
-	position:relative;
-	overflow:hidden;
-	background-color:#5914a0;
+	position: relative;
+	overflow: hidden;
+	background-color: #5914a0;
 	color: white;
 }
 
 #trainer .product-info {
-	padding:20px;
+	padding: 20px;
 }
 
 #trainer .product-image {
@@ -540,22 +537,35 @@ transition: all 0.5s ease-in-out;
 }
 
 #trainer .part-two .product-image {
-	left:0;
+	left: 0;
 }
 
 .trainer h1 {
-	font-weight:700;
+	font-weight: 700;
 }
 
 .trainer h2 {
-	font-size:20px;
-	font-weight:300;
-	line-height:1.3;
-	text-transform:initial;
-	margin-bottom:25px;
+	font-size: 20px;
+	font-weight: 300;
+	line-height: 1.3;
+	text-transform: initial;
+	margin-bottom: 25px;
 }
 
+.carousel-prev {
+	font-size: 36px;
+	display: inline-block;
+	padding: 10px;
+	cursor: pointer;
+}
 
+.carousel-next {
+	font-size: 36px;
+	display: inline-block;
+	padding: 10px;
+	cursor: pointer;
+	margin-left: 10px;
+}
 
 
 
