--- a/css/main.css
+++ b/css/main.css
@@ -77,6 +77,11 @@ h1, h2, h3, h4, h5, h6 {
 	margin-bottom: 30px;
 }
 
+#win-title {
+	font-face: arial;
+	
+}
+
 .btn-primary {
 	margin-top: 25px;
 	margin-bottom: 25px;
