--- a/css/main.css
+++ b/css/main.css
@@ -78,9 +78,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #win-title {
-	font-family: arial;
-	font-weight: 200;
-	
+	font-family: futura;
 }
 
 .btn-primary {
