--- a/css/main.css
+++ b/css/main.css
@@ -61,7 +61,7 @@ h5 {
 h1, h2, h3, h4, h5, h6 {
 	font-family: 'Raleway', sans-serif;
 	font-weight: 300;
-	text-transform: capitalize;
+	text-transform: uppercase;
 }
 
 .padding {
