--- a/css/responsive.css
+++ b/css/responsive.css
@@ -11,20 +11,44 @@
 	.instruction-tab .tab-list li a {
 		padding:17px 12px;
 	}
+
+	body {
+		font-family: 'Raleway', sans-serif;
+		font-size: 16px;
+		color: #353535;
+		background-color: #fff;
+	}
+
+	.about-text {
+		font-size: 15;
+	}
+
+
 }
 
 /* sm */
 @media (min-width: 768px) and (max-width: 991px) {
+
+	body {
+		font-family: 'Raleway', sans-serif;
+		font-size: 17px;
+		color: #353535;
+		background-color: #fff;
+	}
+
+	.about-text {
+		font-size: 12;
+	}
 	.navbar-header {
 		max-width:30%;
 	}
 	.navbar-brand > img {
 		width:100%;
 	}
-	.navbar-nav li a {
+	/* .navbar-nav li a {
 		padding:10px 8px;
 		line-height:35px;
-	}
+	} */
 	.main-slider .slider-content h2 {
 		font-size:45px;
 	}
@@ -38,11 +62,20 @@
 	#gmap {
 		height:450px;
 	}
+
+	.nav-text {
+		font-size: 10px;
+	}
+
+
+	
 }
 
 
 /* xs */
 @media (max-width: 767px) {
+	
+
 	.nonmobile {
 		display: none;
 	}
@@ -155,6 +188,10 @@
 	#footer-bottom {
 		padding: 30px 0px 20px;
 	}
+
+	.hidden-image {
+		display: none;
+	}
 }
 
 /* XS Portrait */
@@ -162,6 +199,10 @@
 	.visa-tab .tab-list li {
 		max-width:100%;
 		display:block;
+	}
+
+	.hidden-image {
+		display: none;
 	}
 }
 
